# nucleic-acid

./: Cargo.toml  LICENSE.md  README.md
benches/: bits_vec.rs  bwt.rs
src/: bits_vec.rs  bwt.rs  io.rs  lib.rs  sa.rs  trie.rs
src/rust-fillings/: Cargo.toml
src/rust-fillings/benches/: bits_vec.rs
src/rust-fillings/src/: lib.rs
