[package]
name = "helix"
version = "0.1.0"
authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
description = "Implementations of Suffix Array, Burrows-Wheeler Transform and FM-index"
repository = "https://github.com/Wafflespeanut/rust-helix"
documentation = "https://wafflespeanut.github.io/rust-helix/"
readme = "README.md"
license = "MIT"
categories = ["algorithms", "data-structures", "science"]
keywords = ["index", "bwt", "vector", "search"]

[dependencies]
num-traits = "0.1"
rustc-serialize = "0.3"
bit-vec = "0.4"

[dev-dependencies]
lazy_static = "0.1"
rand = "0.3"
