[package]
name = "nucleic-acid"
version = "0.1.1"
authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
description = "Implementations of Suffix Array, Burrows-Wheeler Transform and FM-index"
repository = "https://github.com/Wafflespeanut/nucleic-acid"
documentation = "https://wafflespeanut.github.io/nucleic-acid/"
readme = "README.md"
license = "MIT"
categories = ["algorithms", "data-structures", "science"]
keywords = ["index", "bwt", "vector", "search"]

[dependencies]
num-traits = "0.1"
bit-vec = "0.4"

[dev-dependencies]
lazy_static = "0.2"
rand = "0.3"
